Code: Train event-CNN supervisedly without photon information

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -2186,7 +2186,7 @@
     "ax.set_title('Event-CNN')\n",
     "ax.legend(frameon=False, loc='lower right')\n",
     "\n",
-    "plt.savefig('../figures/event_CNN_AUC-true_L.pdf', dpi=300, facecolor='White', bbox_inches='tight')\n",
+    "# plt.savefig('../figures/event_CNN_AUC-true_L.pdf', dpi=300, facecolor='White', bbox_inches='tight')\n",
     "plt.show()\n"
    ]
   },
@@ -2278,6 +2278,87 @@
     "\n",
     "sample_type = 'quark jet: = 2, L: 100 fb^-1, pT normalized, remove photon: case 1, phi shifting: +15'\n",
     "print_ACC_AUC(df, sample_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Superviesed learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-07-16' and time < '2025-07-17'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized\n",
+      "ACC: 0.794 ± 0.001\n",
+      "AUC: 0.873 ± 0.001\n",
+      "True ACC and AUC\n",
+      "ACC: 0.792 ± 0.001\n",
+      "AUC: 0.871 ± 0.001\n",
+      "$0.794 \\pm 0.001$ & $0.873 \\pm 0.001$ & $0.792 \\pm 0.001$ & $0.871 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-08-06' and time < '2025-08-07'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pure, pT normalized, remove photon: case 1\n",
+      "ACC: 0.784 ± 0.001\n",
+      "AUC: 0.864 ± 0.000\n",
+      "True ACC and AUC\n",
+      "ACC: 0.784 ± 0.001\n",
+      "AUC: 0.862 ± 0.001\n",
+      "$0.784 \\pm 0.001$ & $0.864 \\pm 0.000$ & $0.784 \\pm 0.001$ & $0.862 \\pm 0.001$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'pure, pT normalized, remove photon: case 1'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
    ]
   }
  ],
