--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2232,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2617,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2631,13 @@
       "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_05.json\n",
       "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_06.json\n",
       "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_07.json\n",
-      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_08.json\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_09.json\n",
       "python train_CNN.py config_files/quark_jet_2_cut_L_3000_log_pT_pT_norm_config_10.json\n"
      ]
@@ -2669,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2715,53 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_01.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_02.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_03.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_04.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_05.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_06.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_07.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_08.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_09.json\n",
-      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_10.json\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 1\n",
-    "for seed in range(123, 1100, 100):\n",
-    "    config_path = f'config_files/supervised_pT_norm_eventCNN_config_{i:02}.json'\n",
-    "    with open(config_path, 'w') as f:\n",
-    "        data = {}\n",
-    "\n",
-    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/40x40/'\n",
-    "        data['seed'] = seed\n",
-    "        data['n_train'] = 100000\n",
-    "        data['n_val'] = 25000\n",
-    "        data['n_test'] = 25000\n",
-    "\n",
-    "        data['model_name'] = f'supervised_eventCNN_{i:02}'\n",
-    "        data['model_structure'] = 'event-CNN'\n",
-    "        data['sample_type'] = f'pure, pT normalized'\n",
-    "\n",
-    "        json.dump(data, f, indent=4)\n",
-    "\n",
-    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
-    "    print(cmd)\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2808,7 +2768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2855,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2909,7 +2869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3062,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3161,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3255,7 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3309,7 +3269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -3357,7 +3317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -3480,7 +3440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -3862,7 +3822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3972,6 +3932,106 @@
     "        json.dump(data, f, indent=4)\n",
     "\n",
     "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Superviesed learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_eventCNN_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_eventCNN_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'pure, pT normalized'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_01.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_02.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_03.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_04.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_05.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_06.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_07.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_08.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_09.json\n",
+      "python train_CNN_supervised.py config_files/supervised_pT_norm_eventCNN_remove_photon_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "# aug = 5\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/supervised_pT_norm_eventCNN_remove_photon_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_path'] = '../Sample/data/supervised/pre-processing/remove_photon_case_1/40x40/'\n",
+    "        data['seed'] = seed\n",
+    "        data['n_train'] = 100000\n",
+    "        data['n_val'] = 25000\n",
+    "        data['n_test'] = 25000\n",
+    "\n",
+    "        data['model_name'] = f'supervised_eventCNN_wo_a_case1_{i:02}'\n",
+    "        data['model_structure'] = 'event-CNN'\n",
+    "        data['sample_type'] = f'pure, pT normalized, remove photon: case 1'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN_supervised.py {config_path}'\n",
     "    print(cmd)\n",
     "    i += 1"
    ]
