--- a/Note/reference.bib
+++ b/Note/reference.bib
@@ -831,3 +831,13 @@ month = {sep}
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2405.09591}, 
 }
+
+@article{Qu:2022mxj,
+    author = "Qu, Huilin and Li, Congqiao and Qian, Sitian",
+    title = "{Particle Transformer for Jet Tagging}",
+    eprint = "2202.03772",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "2",
+    year = "2022"
+}
