Code: Test supervised and CWoLa training with different pre-process workflow samples

--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -263,7 +263,34 @@
     "            keys = get_dataset_keys(f_SR)\n",
     "            for key in keys:\n",
     "                f_SR[key][:] = f[key][:][SR_range]\n",
-    "                f_SB[key][:] = f[key][:][BR_range]"
+    "                f_SB[key][:] = f[key][:][BR_range]\n",
+    "\n",
+    "def split_SR_BR_npy(h5_path, npy_path, output_path, cut_type, cut_value=300):\n",
+    "    # read data\n",
+    "    with h5py.File(h5_path, 'r') as f:\n",
+    "\n",
+    "        j1_flavor = f[f'J1/flavor'][:]\n",
+    "        j2_flavor = f[f'J2/flavor'][:]\n",
+    "        if cut_type == 'quark_jet':\n",
+    "            quark_jet = (j1_flavor < 6).astype(int) + (j2_flavor < 6).astype(int)\n",
+    "            SR_range = quark_jet >= cut_value\n",
+    "            BR_range = quark_jet < cut_value\n",
+    "        else:\n",
+    "            raise ValueError(f'cut_type {cut_type} not supported')\n",
+    "\n",
+    "        \n",
+    "    root, _ = os.path.splitext(output_path)\n",
+    "    output_path = Path(output_path)\n",
+    "    output_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    root = output_path.with_suffix('')\n",
+    "    SR_path = f'{root}_in_SR.h5'\n",
+    "    BR_path = f'{root}_in_BR.h5'\n",
+    "\n",
+    "    data = np.load(npy_path)\n",
+    "    data_SR = data[SR_range]\n",
+    "    data_BR = data[BR_range]\n",
+    "    np.save(SR_path, data_SR)\n",
+    "    np.save(BR_path, data_BR)"
    ]
   },
   {
@@ -420,6 +447,36 @@
     "h5_path = 'data/ZZ_4l/VBF.h5'\n",
     "output_path = f'data/ZZ_4l/{cut_type}_{cut_value}_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value, mode='ZZ_4l')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'quark_jet'\n",
+    "cut_value = 2\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "npy_path = 'yian-npy0826/GGF_w_diphoton_images.npy'\n",
+    "output_path = f'yian-npy0826/CWoLa/w_photon/GGF.npy'\n",
+    "split_SR_BR_npy(h5_path, npy_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "npy_path = 'yian-npy0826/VBF_w_diphoton_images.npy'\n",
+    "output_path = f'yian-npy0826/CWoLa/w_photon/VBF.npy'\n",
+    "split_SR_BR_npy(h5_path, npy_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "npy_path = 'yian-npy0826/GGF_wo_diphoton_images.npy'\n",
+    "output_path = f'yian-npy0826/CWoLa/wo_photon/GGF.npy'\n",
+    "split_SR_BR_npy(h5_path, npy_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "npy_path = 'yian-npy0826/VBF_wo_diphoton_images.npy'\n",
+    "output_path = f'yian-npy0826/CWoLa/wo_photon/VBF.npy'\n",
+    "split_SR_BR_npy(h5_path, npy_path, output_path, cut_type, cut_value)"
    ]
   },
   {
